# flask_real_time_app

./: .dockerignore  Dockerfile  Makefile  README.md  azure-pipelines.yml  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
instance/: database.db
k8s/config/: config.yaml
k8s/manifests/: 2-deployment.yaml  3-service.yaml  4-ingress.yaml
real_time_app/: app.py
real_time_app/instance/: database.db
real_time_app/models/: payment.py
real_time_app/payments/: pix.py
real_time_app/templates/: confirmed_payment.html  payment.html
src/: app.py  app_factory.py
src/instance/: database.db
src/models/: payment.py
src/repositories/: payment_repository.py
src/routers/: payment_routes.py
src/services/: payment_service.py  pix_service.py
