[tool.poetry]
name = "real-time-app"
version = "0.1.0"
description = ""
authors = ["leandrosouzaf30 <leandrosouzaf30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.0"
flask-sqlalchemy = "3.1.1"
flask-socketio = "5.3.6"
pillow = "10.2.0"
qrcode = "7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
